--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,243 @@
-.App {
-  text-align: center;
+
+
+
+
+
+
+
+
+.tt0{fill:url(#SVGID_1_);stroke:#000000;stroke-miterlimit:10;}
+	.tt1{fill:#100073;stroke:#000000;stroke-miterlimit:10;}
+	.tt2{fill:#04008B;stroke:#000000;stroke-miterlimit:10;}
+	.tt3{fill:#002BB9;stroke:#000000;stroke-miterlimit:10;}
+	.tt4{fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;}
+	.tt5{fill:#3217FF;stroke:#000000;stroke-miterlimit:10;}
+	.tt6{fill:#0100D0;stroke:#000000;stroke-miterlimit:10;}
+	.tt7{fill:#0A00A2;stroke:#000000;stroke-miterlimit:10;}
+	.tt8{fill:#3E17FF;stroke:#000000;stroke-miterlimit:10;}
+	.tt9{fill:#0F005C;}
+	.tt10{fill:url(#SVGID_2_);}
+	.tt11{fill:url(#SVGID_3_);stroke:#000000;stroke-miterlimit:10;}
+	.tt12{fill:#3E0045;stroke:#000000;stroke-miterlimit:10;}
+	.tt13{fill:url(#SVGID_4_);stroke:#000000;stroke-miterlimit:10;}
+	.tt14{fill:url(#SVGID_5_);}
+	.tt15{fill:url(#SVGID_6_);}
+
+@keyframes draw-st3{
+    from {
+        stroke-dasharray:650;
+        transform: rotateY(0deg) rotateX(0deg);
+    }
+    
+    to {
+        
+        stroke-dashoffset:-659;
+        transform: rotateY(540deg) rotateX(270deg);
+    }
+}
+/* linked to st0
+*/
+.tt3{
+    
+    stroke-dasharray: 650;
+    stroke-dashoffset:-650;
+    animation: draw-st0 22s infinite;
+    transform-origin: 35% 75%;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+
+
+@keyframes draw-st4{
+    from {
+        stroke-dasharray:650;
+        transform: rotateY(0deg) rotateX(0deg);
+    }
+    
+    to {
+        
+        stroke-dashoffset:-659;
+        transform: rotateY(540deg) rotateX(360deg);
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+.tt4{
+    display: hidden;
+    stroke-dasharray: 650;
+    stroke-dashoffset:-650;
+    animation: draw-sto 3s infinite;
+    transform-origin: 75% 50%;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+
+
+@keyframes draw-st2{
+    from {
+        stroke-dasharray:650;
+        transform: rotateY(0deg) rotateX(0deg);
+    }
+    
+    to {
+        
+        stroke-dashoffset:-659;
+        transform: rotateY(720deg) rotateX(270deg);  
+    }
 }
 
-.App-link {
-  color: #61dafb;
+.tt2{
+    stroke-dasharray: 650;
+    stroke-dashoffset:-650;
+    animation: draw-st3 16s infinite;
+    transform-origin: 50% 50%;
+    
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes draw-st0{
+    from {
+        stroke-dasharray:-650;
+        transform: rotateY(0deg);
+    }
+    
+    to {
+        
+        stroke-dashoffset:0;
+        transform: rotateY(360deg);
+    }
+}
+/* for main element
+*/
+
+.tt0{
+    stroke-dasharray: -650;
+    stroke-dashoffset: 650;
+    animation: draw-st3 6s infinite;
+    
+}
+
+
+
+
+@keyframes draw-st3{
+    from {
+        stroke-dasharray:650;
+        transform: rotateY(0deg) rotateX(0deg);
+    }
+    
+    to {
+        
+        stroke-dashoffset:-659;
+        transform: rotateY(540deg) rotateX(270deg);
+    }
+}
+/* linked to st0
+*/
+.tt3{
+    
+    stroke-dasharray: 650;
+    stroke-dashoffset:-650;
+    animation: draw-st0 22s infinite;
+    transform-origin: 35% 75%;
+    
+}
+
+
+
+
+
+@keyframes draw-st4{
+    from {
+        stroke-dasharray:650;
+        transform: rotateY(0deg) rotateX(0deg);
+    }
+    
+    to {
+        
+        stroke-dashoffset:-659;
+        transform: rotateY(540deg) rotateX(360deg);
+    }
+}
+
+
+
+.tt9{
+    display: hidden;
+    stroke-dasharray: 650;
+    stroke-dashoffset:-650;
+    animation: draw-sto 3s infinite;
+    transform-origin: 75% 50%;
+    
+}
+
+
+
+
+
+@keyframes draw-st2{
+    from {
+        stroke-dasharray:650;
+        transform: rotateY(0deg) rotateX(0deg);
+    }
+    
+    to {
+        
+        stroke-dashoffset:-659;
+        transform: rotateY(720deg) rotateX(270deg);  
+    }
+}
+
+.tt8{
+    stroke-dasharray: 650;
+    stroke-dashoffset:-650;
+    animation: draw-st3 16s infinite;
+    transform-origin: 50% 50%;
+    
+}
+
+@keyframes draw-st0{
+    from {
+        stroke-dasharray:-650;
+        transform: rotateY(0deg);
+    }
+    
+    to {
+        
+        stroke-dashoffset:0;
+        transform: rotateY(360deg);
+    }
+}
+/* for main element
+*/
+
+.tt7{
+    stroke-dasharray: -650;
+    stroke-dashoffset: 650;
+    animation: draw-st3 6s infinite;
+    
+}
+
+#bg-video ,.content{
+    position:fixed;
+    top:0; left:0; width:100%; height:100%;
+    z-index:0;
+}
+
+.content{
+    z-index:1; 
+    overflow: auto;
+    
+}
+
+
+
+.textarea{
+    font-size: 88px;
+    font: 100px
+
 }
